# gpslog

./: .gitignore  .pre-commit-config.yaml  README.md  gpslog.py  setup.cfg  stop_gpslog.py
.github/workflows/: build.yml
