[metadata]
name = gpslog
version = 0.0.0
description = A tool to track your travel route.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkittner/gpslog
author = Jonas Kittner
author_email = jkittner@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules =
    gpslog
    stop_gpslog
install_requires =
    adafruit-circuitpython-gps>=3.6.0
    pyserial>=3.4
    importlib-metadata;python_version<"3.8"
python_requires = >=3.8

[options.entry_points]
console_scripts =
    gpslog = gpslog:main
    stop-gpslog = stop_gpslog:main

[bdist_wheel]
universal = True
